<resources>
    <string name="app_name">AirData</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user">User name</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">example@gmail.com</string>
    <string name="submit">Submit</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="data">Data</string>
    <string name="music">Music</string>
    <string name="share">Share/Send</string>
    <string name="sh">Share</string>
    <string name="upload">Upload</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="sdata">Use upto 100GB free of cost then you should pay </string>
    <string name="title_activity_music">MusicActivity</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="allsongs">Allsongs</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="title_activity_splash_screen">Airdata</string>
    <string name="title_activity_login">LoginActivity</string>

</resources>
