<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/airdatatwo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.airdata.airdata.RegisterActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/edittextstyle"
        android:hint="@string/name"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/mobile"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/name"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextstyle"
        android:hint="@string/mobile"
        android:inputType="number"
        android:maxLength="10"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/mobile"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextstyle"
        android:hint="@string/email"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/email"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextstyle"
        android:hint="@string/user"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/username"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextstyle"
        android:hint="@string/pass"
        android:paddingLeft="10dp"
        android:password="true" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:textSize="20dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/submit" />
</RelativeLayout>
