<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.airdata.airdata.LoginActivity"
    android:background="@drawable/airdatatwo"
    >
    <EditText
        android:id="@+id/lusername"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/edittextstyle"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:hint="@string/user" />

    <EditText
        android:id="@+id/lpassword"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/lusername"
        android:singleLine="true"
        android:background="@drawable/edittextstyle"
        android:paddingLeft="10dp"
        android:password="true"
        android:hint="@string/pass" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lpassword"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/buttonstyle"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/register"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/buttonstyle"
            android:textSize="20dp"
            android:text="@string/register" />
    </LinearLayout>
</RelativeLayout>
