<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/airdatatwo"
    tools:context="com.airdata.airdata.HomeActivity">

    <LinearLayout
        android:id="@+id/linearone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:orientation="horizontal">

        <Button
            android:background="@drawable/buttonstyle"
            android:id="@+id/data"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:text="@string/data"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/music"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/buttonstyle"
            android:textSize="20dp"
            android:text="@string/music" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineartwo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/share"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:text="@string/share"
            android:background="@drawable/buttonstyle"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/upload"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/buttonstyle"
            android:textSize="20dp"
            android:text="@string/upload" />
    </LinearLayout>
</RelativeLayout>
