<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/airdatatwo"
    tools:context="com.airdata.airdata.MusicActivity"
    >
    <Button
        android:id="@+id/albums"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/albums"
        android:background="@drawable/buttonstyle"
        />

    <Button
        android:id="@+id/artist"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="105dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/artists" />

    <Button
        android:id="@+id/songs"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="210dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/allsongs" />

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/songs"></ListView>
</RelativeLayout>
